# web-temp-tracker

./: .gitignore  README.md
client/: app.py  plotter.py
client/static/: config.js
client/templates/: avg_temp_day.html  avg_temp_hour.html  index.html  navbar.html  temperatures.html
server/: CMakeLists.txt  main.cpp  my_serial.hpp  server.cpp  simulator.cpp
